documentations/pharma.cloudformation.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Resources": {
    "vpc0a3526aa7bec918c1": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "InstanceTenancy": "default",
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "true",
        "Tags": [
          {
            "Key": "Name",
            "Value": "PharmaVPC"
          }
        ]
      }
    },
    "subnet01c34f11f8024af44": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.2.0/24",
        "AvailabilityZone": "us-east-1b",
        "VpcId": {
          "Ref": "vpc0a3526aa7bec918c1"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "1bPublicPharma"
          }
        ]
      }
    },
    "subnet0d1ce7ab1f68a198f": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.3.0/24",
        "AvailabilityZone": "us-east-1a",
        "VpcId": {
          "Ref": "vpc0a3526aa7bec918c1"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "1aPrivatePharma"
          }
        ]
      }
    },
    "subnet08d84f4e99fc992d4": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.4.0/24",
        "AvailabilityZone": "us-east-1b",
        "VpcId": {
          "Ref": "vpc0a3526aa7bec918c1"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "1bPrivatePharma"
          }
        ]
      }
    },
    "subnet0be5bacf306225fa8": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.1.0/24",
        "AvailabilityZone": "us-east-1a",
        "VpcId": {
          "Ref": "vpc0a3526aa7bec918c1"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "1aPublicPharma"
          }
        ]
      }
    },
    "igw0fc79eee79122b9a5": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "IgwPharma"
          }
        ]
      }
    },
    "doptf116018a": {
      "Type": "AWS::EC2::DHCPOptions",
      "Properties": {
        "DomainName": "ec2.internal",
        "DomainNameServers": [
          "AmazonProvidedDNS"
        ]
      }
    },
    "acl06cf48dbbcaa66027": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {
          "Ref": "vpc0a3526aa7bec918c1"
        }
      }
    },
    "rtb022bd031ba79212f9": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpc0a3526aa7bec918c1"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "PrivatePharmaRT1"
          }
        ]
      }
    },
    "PubicPharmaRT": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpc0a3526aa7bec918c1"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "PubicPharmaRT"
          }
        ]
      }
    },
    "PrivatePharmaRT2": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpc0a3526aa7bec918c1"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "PrivatePharmaRT2"
          }
        ]
      }
    },
    "elbPharmaLB": {
      "Type": "AWS::ElasticLoadBalancing::LoadBalancer",
      "Properties": {
        "Subnets": [
          {
            "Ref": "subnet01c34f11f8024af44"
          },
          {
            "Ref": "subnet0be5bacf306225fa8"
          }
        ],
        "HealthCheck": {
          "HealthyThreshold": "10",
          "Interval": "30",
          "Target": "TCP:80",
          "Timeout": "5",
          "UnhealthyThreshold": "2"
        },
        "ConnectionDrainingPolicy": {
          "Enabled": "false",
          "Timeout": "300"
        },
        "ConnectionSettings": {
          "IdleTimeout": "60"
        },
        "CrossZone": "true",
        "Instances": [
          {
            "Ref": "WebInstance1"
          },
          {
            "Ref": "WebInstance2"
          }
        ],
        "SecurityGroups": [
          {
            "Ref": "sgWebServerSecurityGroupLinux"
          }
        ],
        "Listeners": [
          {
            "InstancePort": "80",
            "LoadBalancerPort": "80",
            "Protocol": "HTTP",
            "InstanceProtocol": "HTTP"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "PharmaLB"
          }
        ]
      }
    },
    "eip342261711": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc"
      }
    },
    "eip5272209153": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc"
      }
    },
    "WebInstance1": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "IamInstanceProfile": "EC2_WITH_S3",
        "ImageId": "ami-086fe4c9a99446487",
        "InstanceType": "t2.micro",
        "KeyName": "javaAutoKeyPair",
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": "WebInstance1"
          }
        ],
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "subnet0be5bacf306225fa8"
            },
            "PrivateIpAddresses": [
              {
                "PrivateIpAddress": "10.0.1.181",
                "Primary": "true"
              }
            ],
            "GroupSet": [
              {
                "Ref": "sgWebServerSecurityGroupLinux"
              }
            ],
            "AssociatePublicIpAddress": "true"
          }
        ]
      }
    },
    "DBInstance1": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "IamInstanceProfile": "EC2_WITH_S3",
        "ImageId": "ami-00eb20669e0990cb4",
        "InstanceType": "t2.micro",
        "KeyName": "javaAutoKeyPair",
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": "DBInstance1"
          }
        ],
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "subnet0d1ce7ab1f68a198f"
            },
            "PrivateIpAddresses": [
              {
                "PrivateIpAddress": "10.0.3.232",
                "Primary": "true"
              }
            ],
            "GroupSet": [
              {
                "Ref": "sgDBServerSecurityGroupLinux"
              }
            ],
            "AssociatePublicIpAddress": "true"
          }
        ]
      }
    },
    "DBInstance2": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "IamInstanceProfile": "EC2_WITH_S3",
        "ImageId": "ami-00eb20669e0990cb4",
        "InstanceType": "t2.micro",
        "KeyName": "javaAutoKeyPair",
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": "DBInstance2"
          }
        ],
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "subnet08d84f4e99fc992d4"
            },
            "PrivateIpAddresses": [
              {
                "PrivateIpAddress": "10.0.4.35",
                "Primary": "true"
              }
            ],
            "GroupSet": [
              {
                "Ref": "sgDBServerSecurityGroupLinux"
              }
            ],
            "AssociatePublicIpAddress": "true"
          }
        ]
      }
    },
    "WebInstance2": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "IamInstanceProfile": "EC2_WITH_S3",
        "ImageId": "ami-0ab58bc5d1d1075b4",
        "InstanceType": "t2.micro",
        "KeyName": "javaAutoKeyPair",
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": "WebInstance2"
          }
        ],
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "subnet01c34f11f8024af44"
            },
            "PrivateIpAddresses": [
              {
                "PrivateIpAddress": "10.0.2.113",
                "Primary": "true"
              }
            ],
            "GroupSet": [
              {
                "Ref": "sgWebServerSecurityGroupLinux"
              }
            ],
            "AssociatePublicIpAddress": "true"
          }
        ]
      }
    },
    "sgDBServerSecurityGroupLinux": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "DB Server Security Group Linux",
        "VpcId": {
          "Ref": "vpc0a3526aa7bec918c1"
        }
      }
    },
    "sgWebServerSecurityGroupLinux": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Web Server Security Group Linux",
        "VpcId": {
          "Ref": "vpc0a3526aa7bec918c1"
        }
      }
    },
    "acl1": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Egress": "true",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "acl06cf48dbbcaa66027"
        }
      }
    },
    "acl2": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "acl06cf48dbbcaa66027"
        }
      }
    },
    "subnetacl1": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acl06cf48dbbcaa66027"
        },
        "SubnetId": {
          "Ref": "subnet0be5bacf306225fa8"
        }
      }
    },
    "subnetacl2": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acl06cf48dbbcaa66027"
        },
        "SubnetId": {
          "Ref": "subnet0d1ce7ab1f68a198f"
        }
      }
    },
    "subnetacl3": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acl06cf48dbbcaa66027"
        },
        "SubnetId": {
          "Ref": "subnet01c34f11f8024af44"
        }
      }
    },
    "subnetacl4": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acl06cf48dbbcaa66027"
        },
        "SubnetId": {
          "Ref": "subnet08d84f4e99fc992d4"
        }
      }
    },
    "gw1": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "vpc0a3526aa7bec918c1"
        },
        "InternetGatewayId": {
          "Ref": "igw0fc79eee79122b9a5"
        }
      }
    },
    "subnetroute1": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "rtb022bd031ba79212f9"
        },
        "SubnetId": {
          "Ref": "subnet0d1ce7ab1f68a198f"
        }
      }
    },
    "subnetroute2": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "PubicPharmaRT"
        },
        "SubnetId": {
          "Ref": "subnet0be5bacf306225fa8"
        }
      }
    },
    "subnetroute4": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "PubicPharmaRT"
        },
        "SubnetId": {
          "Ref": "subnet01c34f11f8024af44"
        }
      }
    },
    "subnetroute5": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "PrivatePharmaRT2"
        },
        "SubnetId": {
          "Ref": "subnet08d84f4e99fc992d4"
        }
      }
    },
    "route1": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "rtb022bd031ba79212f9"
        },
        "GatewayId": {
          "Ref": "igw0fc79eee79122b9a5"
        }
      },
      "DependsOn": "gw1"
    },
    "route2": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "PubicPharmaRT"
        },
        "GatewayId": {
          "Ref": "igw0fc79eee79122b9a5"
        }
      },
      "DependsOn": "gw1"
    },
    "route3": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "PrivatePharmaRT2"
        }
      },
        "GatewayId": {
          "Ref": "igw0fc79eee79122b9a5"
        },
      "DependsOn": "gw1"
    },
    "dchpassoc1": {
      "Type": "AWS::EC2::VPCDHCPOptionsAssociation",
      "Properties": {
        "VpcId": {
          "Ref": "vpc0a3526aa7bec918c1"
        },
        "DhcpOptionsId": {
          "Ref": "doptf116018a"
        }
      }
    },
    "ingress1": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgDBServerSecurityGroupLinux"
        },
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "ingress2": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgWebServerSecurityGroupLinux"
        },
        "IpProtocol": "tcp",
        "FromPort": "80",
        "ToPort": "80",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "ingress3": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgWebServerSecurityGroupLinux"
        },
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "egress1": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgDBServerSecurityGroupLinux"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "egress2": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgWebServerSecurityGroupLinux"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    }
  },
  "Description": "Pharma"
}
